force-app/main/default/objects/User/fields/B2B_Alerts__c.field-meta.xml
<CustomField>
    <fullName>B2B_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets all B2B Chatter group notification On (Every Post) or Off (Never).</description>
    <inlineHelpText>Sets all B2B Chatter group notification On (Every Post) or Off (Never).</inlineHelpText>
    <label>Receive B2B Alerts</label>
    <type>Checkbox</type>
</CustomField>