force-app/main/default/objects/User/fields/Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>Brand_Captain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Brand Captain Report filtering only (at present)</description>
    <inlineHelpText>Is the User a Brand Captain (used for report filtering)</inlineHelpText>
    <label>Brand Captain</label>
    <type>Checkbox</type>
</CustomField>