force-app/main/default/objects/User/fields/Brand_Captain_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Brand_Captain_Meetings__c</fullName>
    <formula>HYPERLINK(&quot;/00Ob0000003ycJj?pv1=&quot;  &amp;  FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot;&amp;pv3=&quot;  &amp;  FirstName &amp; &quot; &quot; &amp; LastName,  FirstName &amp; &quot; &quot; &amp; LastName)</formula>
    <label>Brand Captain Meetings</label>
    <type>Text</type>
</CustomField>