force-app/main/default/objects/User/fields/Central_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Central_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Central Initiative</label>
    <type>Checkbox</type>
</CustomField>