force-app/main/default/objects/User/fields/Default_VIP_Card_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_VIP_Card_Location__c</fullName>
    <description>Used by the SCS flow to default the Source on the experience</description>
    <label>Default VIP Card Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIC</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>TRAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>