force-app/main/default/objects/User/fields/HFS_Role_and_Location__c.field-meta.xml
<CustomField>
    <fullName>HFS_Role_and_Location__c</fullName>
    <label>HFS Role and Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>