force-app/main/default/objects/User/fields/HFS_User_Location__c.field-meta.xml
<CustomField>
    <fullName>HFS_User_Location__c</fullName>
    <description>Indicates the Location of the User (i.e. The Apartment, Coach Drop etc.). Used basically for reporting purposes</description>
    <label>HFS User Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>