force-app/main/default/objects/User/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <label>Instagram</label>
    <length>100</length>
    <type>Text</type>
</CustomField>