force-app/main/default/objects/User/fields/Last_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_Login__c</fullName>
    <description>Date and Time of last login to Brand Portal</description>
    <inlineHelpText>System generated Date and Time of last login to Brand Portal</inlineHelpText>
    <label>Last Portal Login</label>
    <type>DateTime</type>
</CustomField>