force-app/main/default/objects/User/fields/Last_Portal_Login_Device__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_Login_Device__c</fullName>
    <description>Device used to last login to Brand Portal</description>
    <inlineHelpText>System generated Device used to last login to Brand Portal</inlineHelpText>
    <label>Last Portal Login Device</label>
    <length>30</length>
    <type>Text</type>
</CustomField>