force-app/main/default/objects/User/fields/Old_Instance_UserId__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_UserId__c</fullName>
    <description>For data migration purposes only, so that records that link to users can be mapped.</description>
    <externalId>true</externalId>
    <label>Old Instance User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>