force-app/main/default/objects/User/fields/Personal_Shopper__c.field-meta.xml
<CustomField>
    <fullName>Personal_Shopper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Shopper</label>
    <type>Checkbox</type>
</CustomField>