force-app/main/default/objects/User/fields/Posts_B2B__c.field-meta.xml
<CustomField>
    <fullName>Posts_B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posts B2B</label>
    <type>Checkbox</type>
</CustomField>