force-app/main/default/objects/User/fields/Profile_Bio__c.field-meta.xml
<CustomField>
    <fullName>Profile_Bio__c</fullName>
    <label>Profile Bio</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>