force-app/main/default/objects/User/fields/PRXC__POS_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>PRXC__POS_Store_Code__c</fullName>
    <label>POS Store Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>