force-app/main/default/objects/User/fields/Receive_B2B_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receive_B2B_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies Users who wish to receive Daily B2B events email alerts, in addition to chatter notifications.</description>
    <inlineHelpText>Identifies Users who wish to receive Daily B2B events email alerts, in addition to chatter notifications.</inlineHelpText>
    <label>Receive Daily B2B Emails</label>
    <type>Checkbox</type>
</CustomField>