force-app/main/default/objects/User/fields/Receive_Weekly_B2B_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receive_Weekly_B2B_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify users who wish to receive weekly B2B summary email.</description>
    <inlineHelpText>To identify users who wish to receive weekly B2B summary email.</inlineHelpText>
    <label>Receive Weekly B2B Emails</label>
    <type>Checkbox</type>
</CustomField>