force-app/main/default/objects/User/fields/Retail_Centre__c.field-meta.xml
<CustomField>
    <fullName>Retail_Centre__c</fullName>
    <inlineHelpText>Used for Alitalia Lookups</inlineHelpText>
    <label>Retail Centre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*Bicester Village</fullName>
            </value>
            <value>
                <fullName>*Bispingen Village</fullName>
            </value>
            <value>
                <fullName>*Fidenza Village</fullName>
            </value>
            <value>
                <fullName>*Ingolstadt Village</fullName>
            </value>
            <value>
                <fullName>*Kildare Village</fullName>
            </value>
            <value>
                <fullName>*La Roca Village</fullName>
            </value>
            <value>
                <fullName>*La Vallee Village</fullName>
            </value>
            <value>
                <fullName>*Las Rozas Village</fullName>
            </value>
            <value>
                <fullName>*Maasmechelen Village</fullName>
            </value>
            <value>
                <fullName>*Wertheim Village</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>