force-app/main/default/objects/User/fields/SandboxE_Instance_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SandboxE_Instance_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>SandboxE Instance User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>