force-app/main/default/objects/User/fields/Send_Custom_B2B_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Custom_B2B_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate user would prefer a custom (old style) B2B email rather than a Chatter post generated version.</description>
    <inlineHelpText>Flag to indicate user would prefer a custom (old style) B2B email rather than a Chatter post generated version.</inlineHelpText>
    <label>Receive Old Style B2B Email Alerts</label>
    <type>Checkbox</type>
</CustomField>