force-app/main/default/objects/User/fields/Shared__c.field-meta.xml
<CustomField>
    <fullName>Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the user account as a shared account.</description>
    <inlineHelpText>Is this user account shared? If so, enter the other email addresses</inlineHelpText>
    <label>Shared</label>
    <type>Checkbox</type>
</CustomField>