force-app/main/default/objects/User/fields/Shared_User_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Shared_User_Email_Addresses__c</fullName>
    <description>If the user is a shared user then this is where the email addresses for the non-master user can go</description>
    <inlineHelpText>If the account is shared, enter the other email addresses of the users who share the user account; separated by a semi-colon</inlineHelpText>
    <label>Shared User Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>