force-app/main/default/objects/User/fields/TIC_Runner__c.field-meta.xml
<CustomField>
    <fullName>TIC_Runner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TIC Runner</label>
    <type>Checkbox</type>
</CustomField>