force-app/main/default/objects/User/fields/Tweet_Department__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Department__c</fullName>
    <inlineHelpText>If the user will be sending Tweets, select a value to categorise it</inlineHelpText>
    <label>Tweet Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Visual Merchandising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>