force-app/main/default/objects/User/fields/VR1UID__c.field-meta.xml
<CustomField>
    <fullName>VR1UID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique VR1 ID</inlineHelpText>
    <label>VR1UID</label>
    <type>Text</type>
</CustomField>