force-app/main/default/objects/User/validationRules/Share_Account_Email_Addresses.validationRule-meta.xml
<ValidationRule>
    <fullName>Share_Account_Email_Addresses</fullName>
    <active>true</active>
    <description>If the account is shared, there must be email addresses entered</description>
    <errorConditionFormula>Shared__c  = ISBLANK( Shared_User_Email_Addresses__c )</errorConditionFormula>
    <errorDisplayField>Shared_User_Email_Addresses__c</errorDisplayField>
    <errorMessage>If the User account is shared, you must enter the other email addresses. If the account is not shared, you must remove any email addresses.</errorMessage>
</ValidationRule>