force-app/main/default/objects/User/listViews/ActiveUsers_ValueRetail.listView-meta.xml
<ListView>
    <fullName>ActiveUsers_ValueRetail</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>User_License__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>contains</operation>
        <value>valueretail.com</value>
    </filters>
    <label>Active Users - Value Retail</label>
    <language>en_US</language>
</ListView>