force-app/main/default/objects/User/listViews/All_Users_With_Old_Ids.listView-meta.xml
<ListView>
    <fullName>All_Users_With_Old_Ids</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Old_Instance_UserId__c</columns>
    <columns>SandboxE_Instance_User_Id__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Old_Instance_UserId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Users With Old Ids</label>
</ListView>