force-app/main/default/objects/User/listViews/Brand_Captains.listView-meta.xml
<ListView>
    <fullName>Brand_Captains</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Captain__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Brand Captains</label>
</ListView>