force-app/main/default/objects/User/listViews/Development_Team_View.listView-meta.xml
<ListView>
    <fullName>Development_Team_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>equals</operation>
        <value>Runner</value>
    </filters>
    <filters>
        <field>Profile_Name__c</field>
        <operation>equals</operation>
        <value>Co-ordinator</value>
    </filters>
    <label>Development Team View</label>
    <language>en_US</language>
</ListView>