force-app/main/default/objects/User/listViews/Salesforce.listView-meta.xml
<ListView>
    <fullName>Salesforce</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_License__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <label>Salesforce</label>
    <language>en_US</language>
</ListView>